# large-language-sommelier

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: RAG.ipynb  api_example.ipynb
src/: main.py
src/api/: main.py  services.py
src/api/old/: rag_api.py
src/core/: config.py  models.py
src/retriever/: semantic_splitter.py  splitter.py
src/utils/: loaders.py
validation/: README.md  app.py  config.py  langfuse_setup.py  main.py  models.py  ollama_api.py  ragas_evaluation.py  requirements.txt  test_rag_chat.py
validation/core/: metrics.py  tester.py
validation/results/: test_results_20250120_171617.json  test_results_20250121_154740.json
validation/ui/: app.py
validation/utils/: ollama_api.py
